--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -23,7 +23,7 @@
             <a href="index.html"><h1>Noor-Us-Sabah Palace</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>4-star hotel</span>
+              <span>4-star hotel <br> BY GROUP-4</span>
             </p>
           </div>
 
